# CourseVideoGen

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test.pptx
core/: __init__.py  audio_generator.py  html_generator.py  llm.py  ppt_parser.py  project_manager.py  script_generator.py  video_generator.py
docs/: API.md  CHANGELOG.md  INSTALL.md  PRD.md  README.md  REFACTOR_SPEC.md  index.md
docs/superpowers/plans/: 2026-06-12-script-generate-refactor-plan.md
docs/superpowers/specs/: 2026-06-12-script-generate-refactor-design.md
example/: test.pptx
examples/: example_slides.json  example_slides_chemistry.json  example_slides_code.json  example_slides_custom.json  example_slides_dark.json  example_slides_minimal.json
models/: project.py
scripts/: fix_duration.py  image_to_video.py
src/videogen/: cli.py
src/videogen/core/: __init__.py  html_generator.py  llm.py  project_manager.py  script_generator.py  video_generator.py
src/videogen/models/: __init__.py  project.py
templates/: README.md
templates/chemistry/: config.json  slide.html  template.html
templates/custom/: config.json  slide.html  template.html
tests/: simple_test.py  test_create_pptx.py  test_html_generator.py  test_llm.py  test_models.py  test_project_manager.py  test_script_generator.py  test_template.py  test_video_generator.py
workspace/: README.md
