[project]
name = "coursevideogen"
version = "0.1.0"
description = "PPT 讲解视频自动生成工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy<2.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-pptx>=0.6.21",
    "edge-tts>=6.1.0",
    "mutagen>=1.47.0",
    "pywin32>=311",
]
