[project]
name = "coursevideogen"
version = "0.1.0"
description = "PPT 讲解视频自动生成工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy<2.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-pptx>=0.6.21",
    "edge-tts>=6.1.0",
    "mutagen>=1.47.0",
    "pywin32>=311",
    "pytest>=9.0.3",
    "openai>=2.41.1",
    "playwright>=1.60.0",
    "loguru>=0.7.3",
    "typer>=0.15.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cvg = "videogen.cli:app"

[project.optional-dependencies]
llm = ["openai>=1.0.0"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
